HE fix: selected filter spacing

--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -31,13 +31,13 @@
 }
 .selected-filters {
     grid-area: 2 / 4 / span 1 / span 8;
-    display: flex;
+    align-self: flex-start;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: row;
+    margin-bottom: 50px;
     margin-left: 35px;
-    height: 100px;
 }
 .selected-filter {
     margin-right: 20px;
@@ -57,8 +57,15 @@
     justify-content: center;
     align-items: center;
 }
-.products {
-    grid-area: 3 / 4 / span 10 / span 8;
+.products-wrapper {
+    grid-area: 2 / 4 / span 10 / span 8;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+.products-grid {
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 50fr);
     grid-template-rows: repeat(3, 348px);
